@@ -351,7 +351,7 @@ func (c *OneConnection) ProcessCmpctBlock(pl []byte) {
 			}
 			shortids[sid] = v.Raw
 			cnt_found++
-			common.CountSafe("CmpctBlkUseRejected")
+			common.CountSafe(fmt.Sprint("CmpctBlkUseRej-", v.Reason))
 		}
 	}
 
